--- a/src/main/app/index.html
+++ b/src/main/app/index.html
@@ -64,7 +64,7 @@
 <body unresolved class="fullbleed layout vertical">
 <span id="browser-sync-binding"></span>
 <template is="dom-bind">
-
+  <nuxeo-connection id="nxc" url="/nuxeo"></nuxeo-connection>
   <nuxeo-app id="app" base-url="/"></nuxeo-app>
 
 
